2008-11-02  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added sparse graph support

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added 'weighted' argument

2008-11-01  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : 'directed' argument added, remove unnneded 
	'add.colnames' attribute

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added

2008-10-31  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.bipartite) : added

2008-10-27  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.full.bipartite) : added

	* interfaces/R/igraph/R/structural.properties.R	(transitivity) :
	* interfaces/R/src/rinterface.c.in (R_igraph_transitivity_barrat) :
	weighted transitivity calculation added

2008-10-24  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/print.R (print.igraph) : quote symbolic
	vertex names by default

	* interfaces/R/igraph/R/structural.properties.R (shortest.paths)
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	make it possible to choose shortest path algorithm by hand
	
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	call Johnson's algorithm, if appropriate

2008-09-29  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structural.properties.R (graph.laplacian)
	* interfaces/R/src/rinterface.c.in (R_igraph_laplacian) : 
	removed, these are generated by Stimulus now

2008-09-26  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks) : 
	add 'cutsetAlgorithm' argument

	* interfaces/R/igraph/R/flow.R (igraph.mincut) : report error 
	if (unimplemented) s-t minimum cut is requested

2008-08-22  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/decomposition.R (is.chordal) : added
	* interfaces/R/src/rinterface.c.in (R_igraph_is_chordal) : added
